# LinuxApplicationDevelopment2022

./: .gitignore  README.md
01_BuildReq/: CMakeLists.txt  hello.c  main.c
02_TerminalProject/: Show  Show.c  show1.c  show3.c
04_Text/: README.md  randomize.sh
06_Regexps/: esub.c
08_Environmental/: Makefile  configure.ac  rhasher.c  run.sh
09_I18n/: Makefile  configure.ac  guess_number.c  guesser.pot  guesser_ru.po
09_I18n/po/: guess_number.po  guess_number.pot
11_Testing/: configure.ac
11_Testing/src/: Makefile  buf.h
11_Testing/tests/: Makefile
12_Documenting/: configure.ac  guessing.1  ru.po
